Fri Feb 11 13:25:02 2005  Chad Elliott  <elliott_c@ociweb.com>

        * README:
        * modules/ProjectCreator.pm:
        * modules/VC7ProjectCreator.pm:

          Added a new pseudo variable, 'quote', that will provide a
          project specific representation of a double quote character.
          RT #5125

        * clone_build_tree.pl:

          Aesthetic change to print only Updating if updating a build and
          Creating if creating a build.

Fri Feb 11 06:58:04 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/mfc.mpb:
        * templates/em3vcp.mpd:
        * templates/em3vcpdll.mpt:
        * templates/em3vcpdllexe.mpt:
        * templates/em3vcplib.mpt:
        * templates/em3vcplibexe.mpt:
        * templates/nmake.mpd:
        * templates/nmakeexe.mpt:
        * templates/vc6dsp.mpd:
        * templates/vc6dspdllexe.mpt:
        * templates/vc6dsplibexe.mpt:
        * templates/vc7.mpd:
        * templates/vc7exe.mpt:
        * templates/vc7libexe.mpt:

          Provided a new template variable, unicode, which when set will
          change the entry point for any MFC related executable to
          wWinMainCRTStartup and set the UNICODE and _UNICODE preprocessor
          macros.  RT #5106

Mon Feb  7 09:51:10 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/em3vcp.mpd:
        * templates/vc6dsp.mpd:

          If pdbl is not set, then specify /pdb:none.  This option is no
          longer supported in later versions of MS LINK, so it is not used
          in then nmake or vc7 templates.

Thu Feb  3 12:53:37 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/em3vcp.mpd:
        * templates/em3vcpdll.mpt:
        * templates/em3vcpdllexe.mpt:
        * templates/em3vcplib.mpt:
        * templates/em3vcplibexe.mpt:
        * templates/nmake.mpd:
        * templates/nmakedll.mpt:
        * templates/nmakeexe.mpt:
        * templates/vc6dsp.mpd:
        * templates/vc6dspdll.mpt: