@@ -361,8 +361,8 @@ postcommand         Allows a user to execute arbitrary commands after
                         <%output_ext%>
 
                     The following pseudo template variables are valid for
-                    use within the command, commandflags, postcommand and
-                    output_option settings:
+                    use within the command, commandflags, dependent,
+                    postcommand and output_option settings:
 
                     <%temporary%> - A temporary file name.
                     <%cat%>       - Platform non-specific command to cat a file.
@@ -378,8 +378,8 @@ postcommand         Allows a user to execute arbitrary commands after
 
                     If any referenced pseudo template variable does
                     not contain a value, then the particular setting
-                    (command, commandflags, postcommand or output_option)
-                    will not be used.
+                    (command, commandflags, dependent, postcommand or
+                    output_option) will not be used.
 pre_extension       If the command produces multiple files of the same
                     extension, this comma separated list can be used to
                     specify them.  For example, tao_idl creates two types of
