@@ -1,3 +1,13 @@
+Sat Feb 12 10:48:29 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * README:
+        * modules/ProjectCreator.pm:
+
+          Changed attributes of 'dependent' to allow users to use <%...%>
+          pseudo variables.  Also fixed a bug where 'gendir' would not be
+          recognized when $(...) variables were converted into windows style
+          paths.
+
 Fri Feb 11 13:25:02 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * README:
